--- a/index.html
+++ b/index.html
@@ -2,15 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <style media="screen">
-      h1 {
-        color:red;
-        text-align:center;
-      }
-    </style>
+    <title>Katie Koehl</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
+
+    <!-- Twitter Cards -->
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://katiekoehl.com/background-image.jpg">
+    <!-- <meta name="twitter:site" content="@tommygaessler"> -->
+    <meta name="twitter:title" content="Katie Koehl">
+    <meta name="twitter:description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
+
+    <!-- OpenGraph -->
+
+    <meta property="fb:app_id" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://katiekoehl.com" />
+    <meta property="og:title" content="Katie Koehl" />
+    <meta property="og:description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors." />
+    <meta property="og:image" content="https://katiekoehl.com/background-image.jpg" />
+    <meta property="og:site_name" content="katiekoehl" />
+
+    <link rel="icon" type="image/x-icon" href="katiekoehl.png">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a33fa6147a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Gotu&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Katie Koehl</h1>
+  <body class="background-image">
+    <main>
+      <h1>Katie Koehl</h1>
+      <p>I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.</p>
+      <div class="links">
+        <a href="http://linkedin.com/in/katiekoehl/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i> Linkedin</a>
+        <a href="katiekoehl.pdf" target="_blank" class="resume"><i class="fas fa-file-pdf"></i> Resume</a>
+        <a href="mailto:koehlkatie@gmail.com?subject=Contact Me" target="_blank" class="resume"><i class="fas fa-envelope-square"></i> Contact</a>
+      </div>
+    </main>
   </body>
 </html>
