--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://katiekoehl.com/background-image.jpg">
-    <!-- <meta name="twitter:site" content="@tommygaessler"> -->
+    <meta name="twitter:site" content="@katie_koehl">
     <meta name="twitter:title" content="Katie Koehl">
     <meta name="twitter:description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
 
@@ -38,7 +38,7 @@
       <div class="links">
         <a href="http://linkedin.com/in/katiekoehl/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i> Linkedin</a>
         <a href="katiekoehl.pdf" target="_blank" class="resume"><i class="fas fa-file-pdf"></i> Resume</a>
-        <a href="mailto:koehlkatie@gmail.com?subject=Contact Me" target="_blank" class="resume"><i class="fas fa-envelope-square"></i> Contact</a>
+        <a href="mailto:koehlkatie@gmail.com?subject=From Website" target="_blank" class="resume"><i class="fas fa-envelope-square"></i> Contact</a>
       </div>
     </main>
   </body>
