--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
+    <meta name="description" content="I am a Project & Event Coordinator for Optum/United Health Care. I specialize in planning all virtual and in-person events. My main focus is event communications, program production, and event logistics. I graduated college in May 2020 from Metropolitan State University of Denver with a degree in Event and Meeting Management and a minor in marketing. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
 
     <!-- Twitter Cards -->
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://katiekoehl.com/background-image.jpg">
+    <meta name="twitter:image" content="https://katiekoehl.com/katie-koehl-background.jpeg">
     <meta name="twitter:site" content="@katie_koehl">
     <meta name="twitter:title" content="Katie Koehl">
-    <meta name="twitter:description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
+    <meta name="twitter:description" content="I am a Project & Event Coordinator for Optum/United Health Care. I specialize in planning all virtual and in-person events. My main focus is event communications, program production, and event logistics. I graduated college in May 2020 from Metropolitan State University of Denver with a degree in Event and Meeting Management and a minor in marketing. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.">
 
     <!-- OpenGraph -->
 
@@ -22,8 +22,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://katiekoehl.com" />
     <meta property="og:title" content="Katie Koehl" />
-    <meta property="og:description" content="I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors." />
-    <meta property="og:image" content="https://katiekoehl.com/background-image.jpg" />
+    <meta property="og:description" content="I am a Project & Event Coordinator for Optum/United Health Care. I specialize in planning all virtual and in-person events. My main focus is event communications, program production, and event logistics. I graduated college in May 2020 from Metropolitan State University of Denver with a degree in Event and Meeting Management and a minor in marketing. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors." />
+    <meta property="og:image" content="https://katiekoehl.com/katie-koehl-background.jpeg" />
     <meta property="og:site_name" content="katiekoehl" />
 
     <link rel="icon" type="image/x-icon" href="katiekoehl.png">
@@ -34,7 +34,7 @@
   <body class="background-image">
     <main>
       <h1>Katie Koehl</h1>
-      <p>I am currently an Event Coordinator at Butterfly Pavilion and a senior at Metropolitan State University of Denver. I am graduating college in May 2020 with a degree in Event and Meeting Management and a minor in marketing. My goal is to get my Certified Meeting Professional License and plan events for a corporate company. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.</p>
+      <p>I am a Project & Event Coordinator for Optum/United Health Care. I specialize in planning all virtual and in-person events. My main focus is event communications, program production, and event logistics. I graduated college in May 2020 from Metropolitan State University of Denver with a degree in Event and Meeting Management and a minor in marketing. I love outdoor activities including skiing, hiking, climbing 14'ers, and hanging out with friends. I also love golden retrievers and enjoying ice cream at local Denver ice cream parlors.</p>
       <div class="links">
         <a href="http://linkedin.com/in/katiekoehl/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i> Linkedin</a>
         <a href="katiekoehl.pdf" target="_blank" class="resume"><i class="fas fa-file-pdf"></i> Resume</a>
